bindings/r/pls4all/src/libp4a/include/pls4all/p4a.h

/* ============================================================================
 * 1. Status codes
 * ========================================================================== */

typedef enum p4a_status_t {
    P4A_OK                        =   0,
    P4A_ERR_INVALID_ARGUMENT      =   1,
    P4A_ERR_NULL_POINTER          =   2,
    P4A_ERR_SHAPE_MISMATCH        =   3,
    P4A_ERR_DTYPE_MISMATCH        =   4,
    P4A_ERR_STRIDE_INVALID        =   5,
    P4A_ERR_NOT_FITTED            =   6,
    P4A_ERR_NUMERICAL_FAILURE     =   7,
    P4A_ERR_CONVERGENCE_FAILED    =   8,
    P4A_ERR_OUT_OF_MEMORY         =   9,
    P4A_ERR_UNSUPPORTED           =  10,
    P4A_ERR_NOT_IMPLEMENTED       =  11,   /* deferred public surface */
    P4A_ERR_ABI_MISMATCH          =  12,
    P4A_ERR_IO                    =  13,
    P4A_ERR_CORRUPT_BUFFER        =  14,
    P4A_ERR_VERSION_INCOMPATIBLE  =  15,
    P4A_ERR_BACKEND_UNAVAILABLE   =  16,
    P4A_ERR_CANCELLED             =  17,
    P4A_ERR_INTERNAL              = 255
} p4a_status_t;
/* ============================================================================
 * 3. Numerical dtypes
 * ========================================================================== */

typedef enum p4a_dtype_t {
    P4A_DTYPE_UNKNOWN = 0,
    P4A_DTYPE_F64     = 1,
    P4A_DTYPE_F32     = 2,
    P4A_DTYPE_I32     = 3,    /* reserved for label / index views */
    P4A_DTYPE_I64     = 4
} p4a_dtype_t;
/* ============================================================================
 * 4. Matrix view — non-owning, stride-aware
 * ==========================================================================
 *
 * The view describes a 2-D array of `dtype` elements at `data`, with `rows`
 * and `cols` and explicit `row_stride` / `col_stride` measured in *elements*
 * (NOT bytes). This shape accepts:
 *   - NumPy row-major (col_stride=1, row_stride=cols)
 *   - R / MATLAB / Fortran column-major (row_stride=1, col_stride=rows)
 *   - Transposed sub-views (swap the two strides)
 *   - Slice views (arbitrary positive strides)
 *
 * Stride rules enforced by p4a_matrix_view_validate:
 *   - Negative strides are rejected.
 *   - For `rows >= 2`, `row_stride` must be >= 1.
 *   - For `cols >= 2`, `col_stride` must be >= 1.
 *   - For degenerate dimensions (`rows <= 1` or `cols <= 1`), the
 *     corresponding stride is unused and may be any non-negative value.
 *   - `rows == 0` or `cols == 0` is allowed (empty view); the buffer may be
 *     NULL in that case.
 *
 * Layout on LP64 (Linux, macOS) and LLP64 (Windows-64): 48 bytes total
 * (8+8+8+8+8+4+4). ILP32 is not supported; Android 32-bit (armeabi-v7a) is
 * explicitly excluded from Phase 0/2 — see roadmap.
 */
typedef struct p4a_matrix_view_t {
    void*        data;
    int64_t      rows;
    int64_t      cols;
    int64_t      row_stride;   /* elements between row i and i+1 */
    int64_t      col_stride;   /* elements between col j and j+1 */
    p4a_dtype_t  dtype;
    int32_t      reserved0;    /* keep struct size stable */
} p4a_matrix_view_t;
/* ============================================================================
 * 5. Opaque handles
 * ========================================================================== */

typedef struct p4a_context_s                    p4a_context_t;
typedef struct p4a_config_s                     p4a_config_t;
typedef struct p4a_operator_bank_s              p4a_operator_bank_t;
typedef struct p4a_model_s                      p4a_model_t;
typedef struct p4a_array_s                      p4a_array_t;
typedef struct p4a_validation_plan_s            p4a_validation_plan_t;
typedef struct p4a_aom_per_component_result_s   p4a_aom_per_component_result_t;
/* ============================================================================
 * 9. Operator bank, gating strategy, preprocessing pipeline
 * ========================================================================== */

typedef enum p4a_operator_kind_t {
    P4A_OP_IDENTITY            = 0,
    P4A_OP_CENTER              = 1,
    P4A_OP_AUTOSCALE           = 2,
    P4A_OP_PARETO_SCALE        = 3,
    P4A_OP_SNV                 = 4,
    P4A_OP_MSC                 = 5,
    P4A_OP_EMSC                = 6,
    P4A_OP_DETREND_POLY        = 7,
    P4A_OP_SAVGOL_SMOOTH       = 8,
    P4A_OP_SAVGOL_DERIVATIVE   = 9,
    P4A_OP_NORRIS_WILLIAMS     = 10,
    P4A_OP_ASLS_BASELINE       = 11,
    P4A_OP_OSC                 = 12,
    P4A_OP_EPO                 = 13,
    P4A_OP_WAVELET_DENOISE     = 14,
    P4A_OP_FINITE_DIFFERENCE   = 15,
    P4A_OP_WHITTAKER           = 16,
    P4A_OP_FCK                 = 17
} p4a_operator_kind_t;
/* ============================================================================
 * 10. Model lifecycle
 * ==========================================================================
 *
 * The current core implements P4A_ALGO_PLS_REGRESSION with P4A_SOLVER_NIPALS,
 * P4A_SOLVER_ORTHOGONAL_SCORES, P4A_SOLVER_SIMPLS,
 * P4A_SOLVER_KERNEL_ALGORITHM, P4A_SOLVER_WIDE_KERNEL, P4A_SOLVER_SVD,
 * P4A_SOLVER_POWER or P4A_SOLVER_RANDOMIZED_SVD using
 * P4A_DEFLATION_REGRESSION; P4A_ALGO_PLS_CANONICAL with P4A_SOLVER_NIPALS or
 * P4A_SOLVER_SVD using P4A_DEFLATION_CANONICAL; P4A_ALGO_PLS_SVD with
 * P4A_SOLVER_SVD using P4A_DEFLATION_CANONICAL; P4A_ALGO_PLS_DA with the
 * PLS regression solver set using P4A_DEFLATION_REGRESSION; P4A_ALGO_OPLS
 * and P4A_ALGO_OPLS_DA with one or more Y targets, P4A_SOLVER_NIPALS and
 * P4A_DEFLATION_ORTHOGONAL; and P4A_ALGO_PCR with P4A_SOLVER_SVD using
 * P4A_DEFLATION_REGRESSION. Multi-response OPLS uses one shared predictive
 * score direction from the dominant singular pair of X.T @ Y. PLSSVD
 * transform returns direct X scores from SVD(X.T @ Y); predict uses the
 * deterministic latent projection X @ W @ V.T scaled back to Y.
 * Unsupported algorithms / solvers / deflation modes return
 * P4A_ERR_UNSUPPORTED. Phase 6 adds AOM-PLS through the operator_bank +
 * gating_strategy hooks set on the config.
 */
P4A_API p4a_status_t p4a_model_fit(
    p4a_context_t* ctx,
    const p4a_config_t* cfg,
    const p4a_matrix_view_t* X,
    const p4a_matrix_view_t* Y,
    p4a_model_t** out_model);
P4A_API void         p4a_model_destroy(p4a_model_t* model);
/* ---- Predict / transform (caller-provided output buffer) ---- */
P4A_API p4a_status_t p4a_model_predict(
    p4a_context_t* ctx, const p4a_model_t* model,
    const p4a_matrix_view_t* X, p4a_matrix_view_t* out);
P4A_API p4a_status_t p4a_model_transform(
    p4a_context_t* ctx, const p4a_model_t* model,
    const p4a_matrix_view_t* X, p4a_matrix_view_t* out_scores);
/* ---- Predict / transform (core-allocated output) ---- */
P4A_API p4a_status_t p4a_model_predict_alloc(
    p4a_context_t* ctx, const p4a_model_t* model,
    const p4a_matrix_view_t* X, p4a_array_t** out);
P4A_API p4a_status_t p4a_model_transform_alloc(
    p4a_context_t* ctx, const p4a_model_t* model,
    const p4a_matrix_view_t* X, p4a_array_t** out_scores);
/* Tagged accessor for fitted-model arrays. */
typedef enum p4a_model_array_t {
    P4A_MODEL_COEFFICIENTS = 0,   /* (n_features, n_targets) */
    P4A_MODEL_INTERCEPT    = 1,   /* (n_targets,) */
    P4A_MODEL_X_MEAN       = 2,
    P4A_MODEL_X_SCALE      = 3,
    P4A_MODEL_Y_MEAN       = 4,
    P4A_MODEL_Y_SCALE      = 5,
    P4A_MODEL_WEIGHTS_W    = 6,   /* (n_features, n_components) */
    P4A_MODEL_LOADINGS_P   = 7,
    P4A_MODEL_Y_LOADINGS_Q = 8,
    P4A_MODEL_ROTATIONS_R  = 9,
    P4A_MODEL_SCORES_T     = 10,  /* optional — store_scores=1 */
    P4A_MODEL_Y_SCORES_U   = 11   /* optional — store_scores=1 */
} p4a_model_array_t;
P4A_API p4a_status_t p4a_model_get_array(
    p4a_context_t* ctx, const p4a_model_t* model,
    p4a_model_array_t which, p4a_array_t** out);
P4A_API p4a_status_t p4a_model_get_n_components(const p4a_model_t*, int32_t* out);
P4A_API p4a_status_t p4a_model_get_n_features  (const p4a_model_t*, int32_t* out);
P4A_API p4a_status_t p4a_model_get_n_targets   (const p4a_model_t*, int32_t* out);
/* ============================================================================
 * 11. Serialization
 * ==========================================================================
 *
 * The binary format starts with the four-byte magic "P4AM" (the first 4
 * bytes of P4A_SERIALIZATION_MAGIC — note that as a string literal that
 * macro is 5 bytes including the trailing NUL; consumers should compare or
 * memcpy exactly 4 bytes), followed by P4A_SERIALIZATION_FORMAT_VERSION
 * (4-byte LE) and the producing library's ABI version triple (3 × 4-byte
 * LE). The consumer rejects on P4A_SERIALIZATION_FORMAT_VERSION mismatch
 * with P4A_ERR_VERSION_INCOMPATIBLE and writes a warning to last_error if
 * the ABI version differs but the format is compatible. All multi-byte
 * integers are little-endian; all doubles are IEEE 754 binary64 LE.
 */

P4A_API p4a_status_t p4a_model_export_size(
    const p4a_model_t* model, size_t* out_size);
P4A_API p4a_status_t p4a_model_export_to_buffer(
    const p4a_model_t* model, void* buffer, size_t buffer_size,
    size_t* out_written);
P4A_API p4a_status_t p4a_model_import_from_buffer(
    p4a_context_t* ctx, const void* buffer, size_t buffer_size,
    p4a_model_t** out_model);
/* Inspect a buffer's header without fully importing it. Useful for ABI /
 * format compatibility checks before allocating model memory. */
P4A_API p4a_status_t p4a_serialization_inspect(
    const void* buffer, size_t buffer_size,
    uint32_t* out_format_version,
    uint32_t* out_writer_abi_major,
    uint32_t* out_writer_abi_minor,
    uint32_t* out_writer_abi_patch);
/* ============================================================================
 * 13. Output array helper — core-allocated arrays returned by *_alloc calls
 * ==========================================================================
 *
 * p4a_array_t is a non-opaque concept (you read its dtype/shape and obtain a
 * view), but the only ways to construct one are through library functions
 * such as `p4a_model_predict_alloc` and `p4a_pipeline_transform_alloc`.
 * Callers must release it with p4a_array_free. AOM/POP selection (§15)
 * exposes its arrays through result-handle accessors that point into
 * result-owned storage instead.
 */
P4A_API p4a_status_t p4a_array_dtype(const p4a_array_t* arr, p4a_dtype_t* out);
P4A_API p4a_status_t p4a_array_shape(const p4a_array_t* arr,
                                      int64_t* rows, int64_t* cols);
P4A_API p4a_status_t p4a_array_view (const p4a_array_t* arr,
                                      p4a_matrix_view_t* out);
P4A_API void         p4a_array_free (p4a_array_t* arr);
P4A_API p4a_status_t p4a_aom_per_component_select(
    p4a_context_t* ctx,
    const p4a_config_t* cfg,
    const p4a_operator_bank_t* bank,
    const p4a_matrix_view_t* X,
    const p4a_matrix_view_t* Y,
    const p4a_validation_plan_t* plan,
    int32_t max_components,
    p4a_aom_per_component_result_t** out_result);
P4A_API void p4a_aom_per_component_result_destroy(
    p4a_aom_per_component_result_t* result);
P4A_API p4a_status_t p4a_aom_per_component_result_get_n_operators(
    const p4a_aom_per_component_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_per_component_result_get_max_components(
    const p4a_aom_per_component_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_per_component_result_get_selected_n_components(
    const p4a_aom_per_component_result_t* result, int32_t* out);
P4A_API p4a_status_t p4a_aom_per_component_result_get_best_score(
    const p4a_aom_per_component_result_t* result, double* out);
P4A_API p4a_status_t p4a_aom_per_component_result_get_operator_kinds(
    const p4a_aom_per_component_result_t* result,
    const p4a_operator_kind_t** out_data, int32_t* out_size);
P4A_API p4a_status_t p4a_aom_per_component_result_get_selected_operator_indices(
    const p4a_aom_per_component_result_t* result,
    const int32_t** out_data, int32_t* out_size);
P4A_API p4a_status_t p4a_aom_per_component_result_get_component_scores(
    const p4a_aom_per_component_result_t* result,
    const double** out_data, int32_t* out_rows, int32_t* out_cols);
P4A_API p4a_status_t p4a_aom_per_component_result_get_prefix_scores(
    const p4a_aom_per_component_result_t* result,
    const double** out_data, int32_t* out_size);
P4A_API p4a_status_t p4a_aom_per_component_result_get_predictions(
    const p4a_aom_per_component_result_t* result,
    const double** out_data, int64_t* out_rows, int64_t* out_cols);