bindings/python/src/pls4all/_ffi.py


# ---- p4a_model_* ----
lib.p4a_model_fit.restype  = ctypes.c_int
lib.p4a_model_fit.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p,
    ctypes.POINTER(MatrixView), ctypes.POINTER(MatrixView),
    ctypes.POINTER(ctypes.c_void_p),
]
lib.p4a_model_destroy.restype  = None
lib.p4a_model_destroy.argtypes = [ctypes.c_void_p]
lib.p4a_model_predict.restype  = ctypes.c_int
lib.p4a_model_predict.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p,
    ctypes.POINTER(MatrixView), ctypes.POINTER(MatrixView),
]
lib.p4a_model_transform.restype  = ctypes.c_int
lib.p4a_model_transform.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p,
    ctypes.POINTER(MatrixView), ctypes.POINTER(MatrixView),
]
lib.p4a_model_predict_alloc.restype  = ctypes.c_int
lib.p4a_model_predict_alloc.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p,
    ctypes.POINTER(MatrixView), ctypes.POINTER(ctypes.c_void_p),
]
lib.p4a_model_transform_alloc.restype  = ctypes.c_int
lib.p4a_model_transform_alloc.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p,
    ctypes.POINTER(MatrixView), ctypes.POINTER(ctypes.c_void_p),
]
lib.p4a_model_get_array.restype  = ctypes.c_int
lib.p4a_model_get_array.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p, ctypes.c_int,
    ctypes.POINTER(ctypes.c_void_p),
]
lib.p4a_model_get_n_components.restype  = ctypes.c_int
lib.p4a_model_get_n_components.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_model_get_n_features.restype  = ctypes.c_int
lib.p4a_model_get_n_features.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_model_get_n_targets.restype  = ctypes.c_int
lib.p4a_model_get_n_targets.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int32),
]

# ---- p4a_model_* serialization (P4A_SERIALIZATION_FORMAT_VERSION = 1) ----
lib.p4a_model_export_size.restype  = ctypes.c_int
lib.p4a_model_export_size.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_size_t),
]
lib.p4a_model_export_to_buffer.restype  = ctypes.c_int
lib.p4a_model_export_to_buffer.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_size_t),
]
lib.p4a_model_import_from_buffer.restype  = ctypes.c_int
lib.p4a_model_import_from_buffer.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_void_p),
]
lib.p4a_serialization_inspect.restype  = ctypes.c_int
lib.p4a_serialization_inspect.argtypes = [
    ctypes.c_void_p, ctypes.c_size_t,
    ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32),
    ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint32),
]

# ---- p4a_array_* ----
lib.p4a_array_dtype.restype  = ctypes.c_int
lib.p4a_array_dtype.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int),
]
lib.p4a_array_shape.restype  = ctypes.c_int
lib.p4a_array_shape.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.c_int64), ctypes.POINTER(ctypes.c_int64),
]
lib.p4a_array_view.restype  = ctypes.c_int
lib.p4a_array_view.argtypes = [ctypes.c_void_p, ctypes.POINTER(MatrixView)]
lib.p4a_array_free.restype  = None
lib.p4a_array_free.argtypes = [ctypes.c_void_p]

# ---- p4a_aom_per_component_* ----
lib.p4a_aom_per_component_select.restype  = ctypes.c_int
lib.p4a_aom_per_component_select.argtypes = [
    ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p,
    ctypes.POINTER(MatrixView), ctypes.POINTER(MatrixView),
    ctypes.c_void_p, ctypes.c_int32, ctypes.POINTER(ctypes.c_void_p),
]
lib.p4a_aom_per_component_result_destroy.restype  = None
lib.p4a_aom_per_component_result_destroy.argtypes = [ctypes.c_void_p]
lib.p4a_aom_per_component_result_get_n_operators.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_n_operators.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_max_components.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_max_components.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_selected_n_components.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_selected_n_components.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_best_score.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_best_score.argtypes = [
    ctypes.c_void_p, ctypes.POINTER(ctypes.c_double),
]
lib.p4a_aom_per_component_result_get_operator_kinds.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_operator_kinds.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_int)),
    ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_selected_operator_indices.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_selected_operator_indices.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_int32)),
    ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_component_scores.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_component_scores.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_double)),
    ctypes.POINTER(ctypes.c_int32), ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_prefix_scores.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_prefix_scores.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_double)),
    ctypes.POINTER(ctypes.c_int32),
]
lib.p4a_aom_per_component_result_get_predictions.restype  = ctypes.c_int
lib.p4a_aom_per_component_result_get_predictions.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(ctypes.POINTER(ctypes.c_double)),
    ctypes.POINTER(ctypes.c_int64), ctypes.POINTER(ctypes.c_int64),
]
